--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,9 +12,13 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "antd": "^5.25.0",
     "react": "^19.1.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.18",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
